[tool.poetry]
name = "repl-html-phind-code-snippet-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_phind_code_snippet_1"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
